Fix height of suggested words with auto overflow

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -17,6 +17,8 @@ p {
 
 .chips-card {
   max-width: 600px;
+  max-height: 250px;
+  overflow: auto;
 }
 .center {
   display: flex;
